  use CSSTidy\Template::loadFromString($string)
! CSSTidy\Output->formattedPage added, returns a full HTML page based
  off of CSSTidy\Output->formatted
! cssparsed.css created, contains just the CSS for formatted CSS output
! New CSS 3 units "ch" and "turn" added
! Unit tests added, requires Text_Diff (PEAR) and SimpleTest
! Some invalid selectors are now removed during optimization, this can
  be turned off by setting 'discard_invalid_selectors' to false
! All HTML outputs uses HTML 5
! Gzipped original and minified size are showed
! Support minimizing HSL, RGBA and HSLA color
! HEX colors are converted to lowercase to smaller compressed size
! New CSS3 properties
! Method for merging @import files
! Properly sorting IE 6 and 7 hack properties (thanks weikinhuang)
! Support for CSS3 animations
! Support for optimizing colors inside gradient function
! Normalize all possible single quotes to double quotes (for smaller gzipped file)
! Convert unit to most smaller (for example 100px -> 75pt)
! Merge transform functions and optimise their parameters
- Added localizations for css_optimiser.php
- Fixed bug with cookie setting for custom templates
- Minor security problem in css_optimiser.php fixed
- Fixed bug with float handling in exotic locales
- Fixed bug with non-functioning getenv in ASAPI
- Fixed bug with bad hexadecimal syntax recovery
- At-selectors optimized by removing unnecessary url()
- Fixed optimisation: 1.0 was not optimised to 1
- Fixed incorrect parsing of !imporant close to numbers
- Fixed incorrect removing url() from @import and parsing with media type specified
- Fixed removing quotation marks from @font-face src property (thanks oroboto)
- Fixed removing quotation marks from url() if contains '('
- Fixed parsing gradient function
- Fixed incorrect removing quotes from quotes property value
- Fixed parsing comments after property or selector
- Dont add hash character (#) before non hex values