@@ -1,3 +1,2 @@
-- Merge overflow-y and overflow-x to overflow property (http://www.w3.org/TR/css3-box/#overflow)
 - Complete support for CSS3 @page at rule (http://www.w3.org/TR/css3-page/)
 - outline and transition shorthands
